# 5AxisSlicer_test

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.ps1  run_smoke.ps1
docs/: BEGINNER_PROJECT_GUIDE.md  MAINTAINER_GUIDE.md  PROJECT_ANALYSIS.md  PUBLISH_REVIEW_2026-06-18.md
example/pipe/: pipe_fitting.stl
src/five_axis_slicer/: __init__.py  __main__.py  app.py
src/five_axis_slicer/core/: __init__.py  gcode.py  legacy_engine.py  settings.py  slicer.py
src/five_axis_slicer/ui/: __init__.py  controller.py  widgets.py  window.py
tools/: regenerate_ui_theme.py  smoke_core.py  smoke_language.py
